--- a/tasks.json
+++ b/tasks.json
@@ -701,5 +701,212 @@
       "Детальная проработка проекта"
     ],
     "rules": "Правила конкурса: прислать работу до 19.05.2018. В работе должны быть учтены пожелания из ТЗ."
+  },
+
+  {
+    "author": "INLINE Technologies Group",
+    "taskName": "Конкурс от INLINE Technologies Group.",
+    "category": 0,
+    "shortTitle": "Web-разработка макетов для INLINE Technologies Group.",
+     "images": [
+      "http://mitro77.zhizntam.ru/wp-content/uploads/2015/03/facebook12.jpg"
+    ],
+    "mainImageIndex": 0,
+    "tags": [
+      {"displayValue": "web"},
+      {"displayValue": "css"}
+    ],
+    "startDate": "15.03.2018",
+    "finishDate": "28.04.2018",
+    "minAge": "17",
+    "maxAge": "25",
+    "reqMaxCount": 20,
+    "desc": "Этот конкурс проводится, чтобы рассказать немного о работе в INLINE Technologies Group,а также чтобы студенты-школьники могли почуствовать себя на ровне с профессионалами.",
+    "requirements": [
+      "Знание основ языков программирования",
+      "Опыт в Web-разработке."
+    ],
+    "judgesList": [
+      {
+        "name": "Даниил Богданов",
+        "authority": "Web-разработчик"
+      },
+      {
+        "name": "Вдадислава Добромыслова",
+        "authority": "Web-разработчик"
+      }
+    ],
+    "judgeCriteria": [
+      "Соответствие ТЗ",
+      "Уникальность предлагаемого подхода",
+      "Быстрое выполнение поставленной задачи"
+    ],
+    "rules": "Правила конкурса: прислать работу до 28.04.2018. В работе должны быть учтены пожелания из ТЗ. К проекту обязательно должна быть приложена ссылка на репозиторий проекта."
+  },
+
+  {
+    "author": "INLINE Technologies Group",
+    "taskName": "Конкурс от INLINE Technologies Group.",
+    "category": 0,
+    "shortTitle": "Web-разработка макетов для INLINE Technologies Group.",
+     "images": [
+      "https://www.business-class.su/uploads/news/a9924289061d84dd71274bee1c7c9470.jpg"
+    ],
+    "mainImageIndex": 0,
+    "tags": [
+      {"displayValue": "web"},
+      {"displayValue": "css"}
+    ],
+    "startDate": "15.03.2018",
+    "finishDate": "28.04.2018",
+    "minAge": "17",
+    "maxAge": "25",
+    "reqMaxCount": 20,
+    "desc": "Этот конкурс проводится, чтобы рассказать немного о работе в INLINE Technologies Group,а также чтобы студенты-школьники могли почуствовать себя на ровне с профессионалами.",
+    "requirements": [
+      "Знание основ языков программирования",
+      "Опыт в Web-разработке."
+    ],
+    "judgesList": [
+      {
+        "name": "Даниил Богданов",
+        "authority": "Web-разработчик"
+      },
+      {
+        "name": "Вдадислав Добромыслов",
+        "authority": "Web-разработчик"
+      }
+    ],
+    "judgeCriteria": [
+      "Соответствие ТЗ",
+      "Уникальность предлагаемого подхода",
+      "Быстрое выполнение поставленной задачи"
+    ],
+    "rules": "Правила конкурса: прислать работу до 28.04.2018. В работе должны быть учтены пожелания из ТЗ. К проекту обязательно должна быть приложена ссылка на репозиторий проекта."
+  },
+
+   {
+    "author": "Juniper Networks",
+    "taskName": "Конкурс от Juniper Networks.",
+    "category": 0,
+    "shortTitle": "Web-разработка макетов для Juniper Networks.",
+     "images": [
+      "https://www.business-class.su/uploads/news/a9924289061d84dd71274bee1c7c9470.jpg"
+    ],
+    "mainImageIndex": 0,
+    "tags": [
+      {"displayValue": "web"},
+      {"displayValue": "css"}
+    ],
+    "startDate": "07.03.2018",
+    "finishDate": "07.04.2018",
+    "minAge": "17",
+    "maxAge": "25",
+    "reqMaxCount": 80,
+    "desc": "Этот конкурс проводится, чтобы рассказать немного о работе в Juniper Networks,а также чтобы студенты-школьники могли почуствовать себя на ровне с профессионалами.",
+    "requirements": [
+      "Знание основ языков программирования",
+      "Опыт в Web-разработке."
+    ],
+    "judgesList": [
+      {
+        "name": "Даниил Богданов",
+        "authority": "Web-разработчик"
+      },
+      {
+        "name": "Вдадислав Добромыслов",
+        "authority": "Web-разработчик"
+      }
+    ],
+    "judgeCriteria": [
+      "Соответствие ТЗ",
+      "Уникальность предлагаемого подхода",
+      "Быстрое выполнение поставленной задачи"
+    ],
+    "rules": "Правила конкурса: прислать работу до 07.04.2018. В работе должны быть учтены пожелания из ТЗ. К проекту обязательно должна быть приложена ссылка на репозиторий проекта."
+  },
+
+  {
+    "author": "Juniper Networks",
+    "taskName": "Конкурс от Juniper Networks.",
+    "category": 0,
+    "shortTitle": "Web-разработка макетов для Juniper Networks.",
+     "images": [
+      "https://media.glassdoor.com/l/44/fe/ef/9a/headquarters.jpg"
+    ],
+    "mainImageIndex": 0,
+    "tags": [
+      {"displayValue": "web"},
+      {"displayValue": "css"}
+    ],
+    "startDate": "11.06.2018",
+    "finishDate": "02.07.2018",
+    "minAge": "17",
+    "maxAge": "25",
+    "reqMaxCount": 80,
+    "desc": "Этот конкурс проводится, чтобы рассказать немного о работе в Juniper Networks,а также чтобы студенты-школьники могли почуствовать себя на ровне с профессионалами.",
+    "requirements": [
+      "Знание основ языков программирования",
+      "Опыт в Web-разработке."
+    ],
+    "judgesList": [
+      {
+        "name": "Артём Баринов",
+        "authority": "Web-разработчик"
+      },
+      {
+        "name": "Юлия Сверлицко",
+        "authority": "Web-разработчик"
+      }
+    ],
+    "judgeCriteria": [
+      "Соответствие ТЗ",
+      "Уникальность предлагаемого подхода",
+      "Быстрое выполнение поставленной задачи",
+      "команда из двух человек"
+    ],
+    "rules": "Правила конкурса: прислать работу до 02.07.2018. В работе должны быть учтены пожелания из ТЗ. К проекту обязательно должна быть приложена ссылка на репозиторий проекта."
+  },
+
+  {
+    "author": "Dell EMC",
+    "taskName": "Конкурс от Dell EMC.",
+    "category": 0,
+    "shortTitle": "Web-разработка макетов для Dell EMC.",
+     "images": [
+      "http://www.businesscloudnews.com/files/2015/10/Dell-office-logo.jpg"
+    ],
+    "mainImageIndex": 0,
+    "tags": [
+      {"displayValue": "web"},
+      {"displayValue": "css"}
+    ],
+    "startDate": "03.07.2018",
+    "finishDate": "19.08.2018",
+    "minAge": "14",
+    "maxAge": "26",
+    "reqMaxCount": 90,
+    "desc": "Этот конкурс проводится, чтобы рассказать немного о работе в Dell EMC,а также чтобы студенты-школьники могли почуствовать себя на ровне с профессионалами.",
+    "requirements": [
+      "Знание основ языков программирования",
+      "Опыт в Web-разработке."
+    ],
+    "judgesList": [
+      {
+        "name": "Артур Платонов",
+        "authority": "Web-разработчик"
+      },
+      {
+        "name": "Юлия Сверлицко",
+        "authority": "Web-разработчик"
+      }
+    ],
+    "judgeCriteria": [
+      "Соответствие ТЗ",
+      "Уникальность предлагаемого подхода",
+      "Быстрое выполнение поставленной задачи",
+      "команда из 2-3 человек"
+    ],
+    "rules": "Правила конкурса: прислать работу до 19.08.2018. В работе должны быть учтены пожелания из ТЗ. К проекту обязательно должна быть приложена ссылка на репозиторий проекта."
   }
 ]
